fix layout spacing on largest breakpoint

--- a/client/index.scss
+++ b/client/index.scss
@@ -52,9 +52,6 @@
 }
 
 @media (min-width: 1001px) {
-  .specs-wrapper {
-    width: 27%;
-  }
   .team-records {
     width: 31%;
   }
